faq questions expand and collapse prject

--- a/javascript-basic-projects-master/07-questions/setup/index.html
+++ b/javascript-basic-projects-master/07-questions/setup/index.html
@@ -18,7 +18,65 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    
+      <div class="title">
+        <h2> general questions</h2> </div>
+        <section class="questions">
+        <article class="question">
+          <div class="question-title">
+          <p>do u accept all major credit cards</p>
+          <button class="question-btn" type="button">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <div class="question-text">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+          </p>
+        </div>        
+        </article>
+        <article class="question">
+          <div class="question-title">
+          <p>benefits of credit card</p>
+          <button class="question-btn" type="button">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <div class="question-text">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+          </p>
+        </div>        
+        </article>
+        <article class="question">
+          <div class="question-title">
+          <p>different types of credit card</p>
+          <button class="question-btn" type="button">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+        </div>
+        <div class="question-text">
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+          </p>
+        </div>        
+        </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
