--- a/javascript-basic-projects-master/08-menu/setup/index.html
+++ b/javascript-basic-projects-master/08-menu/setup/index.html
@@ -13,7 +13,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <section class="menu">
+      <div class="title">
+        <h2>Our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <!-- menu items -->
+      <div class="btn-container">
+        <button class="filter-btn" data-id="all" id="all">All</button>
+      </div>
+      <div class="btn-container">
+        <button class="filter-btn" id="breakfast">breakfast</button>
+      </div>
+      <div class="btn-container">
+        <button class="filter-btn" id="lunch">lunch</button>
+      </div>
+      <div class="btn-container">
+        <button class="filter-btn" id="shakes">shakes</button>
+      </div>
+      <div class="section-center">
+        <!-- single item -->
+        
+        <!-- end of single item -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
