tab project comitted

--- a/javascript-basic-projects-master/09-video/setup/index.html
+++ b/javascript-basic-projects-master/09-video/setup/index.html
@@ -9,8 +9,20 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>video project</h1>
+    <div class="preloader">
+      <img src="preloader.gif" alt="Loading..."  class="preloader__item"
+    </div>
+    <header>
+    <video class="video-container"  muted autoplay loop><source src="video.mp4" type="video/mp4" /></video>
+   <h1>navin's video project</h1>
     <!-- javascript -->
+    <!-- video switch -->
+    <button class="switch-btn">
+      <span>play</span>
+      <span>pause</span>
+      <span class="switch"></span>
+    </button>
+  </header>
     <script src="app.js"></script>
   </body>
 </html>
