--- a/javascript-basic-projects-master/10-scroll/final/index.html
+++ b/javascript-basic-projects-master/10-scroll/final/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll</title>
     <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
@@ -82,7 +83,7 @@
       </p>
     </footer>
     <a class="scroll-link top-link" href="#home">
-      <i class="fas fa-arrow-up"></i>
+      <i class="fa-solid fa-arrow-up"></i>
     </a>
     <!-- javascript -->
     <script src="app.js"></script>
