--- a/javascript-basic-projects-master/12-countdown-timer/setup/index.html
+++ b/javascript-basic-projects-master/12-countdown-timer/setup/index.html
@@ -9,8 +9,45 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="gift.jpeg" alt="gift"/>
+      </article>
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on sunday, 24 June 2023 8:00 pm
+        </h4>
+        <p>
+          n the above example, the JavaScript code selects the <div> container using getElementById("container"). Then, it retrieves all the elements with the class "elementClass" within the container using getElementsByClassName("elementClass").
+
+            The code then iterates over each element and removes the "elementClass" using the classList.remove("elementClass") method. This method removes the specified class from the element.
+            
+            After executing this code, all the elements within the container that had the "elementClass" class will no longer have that class.
+            
+            Note that this example assumes that the container has an id attribute of "container" and the elements within it have a class of "elementClass". Adjust the selector and class name accordingly based on your specific HTML structure and class names.            
+        </p>
+        <div class="deadline">
+          <div class="deadline-format"> 
+              <h4 class="days">34</h4>
+              <span>days</span>
+          </div>
+          <div  class="deadline-format">
+            <h4 class="hours">34</h4>
+            <span>hours</span>
+          </div>
+          <div  class="deadline-format">
+            <h4 class="mins">34</h4>
+            <span>mins</span>
+          </div>
+          <div  class="deadline-format">
+            <h4 class="sec">34</h4>
+            <span>sec</span>
+          </div>
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
-</html>
+</html> 
