api project  committed

--- a/javascript-basic-projects-master/14-grocery-bud/setup/index.html
+++ b/javascript-basic-projects-master/14-grocery-bud/setup/index.html
@@ -13,7 +13,31 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>grocery bud project</h1>
+    <section class="section-center">
+      <form action="" class="grocery-form">
+        <p class="alert"></p>
+        <h3>grocery List</h3>
+        <div class="form-control">
+          <input type="text" id="grocery" placeholder="eg. tomato">
+          <button type="submit" class="submit-btn">Add </button>
+        </div>
+      </form>
+      <div class="grocery-container">
+        <div class="grocery-list">
+          <article class="grocery-item">
+            <p class="title"></p>
+            <div class="btn-container">
+              <button class="edit-btn" type="button" >
+                <i class="fas fa-edit"></i>
+              </button>
+              <button type="button" class="delete-btn">
+                <i class="fas fa-trash"></i>
+              </button>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
